--- a/src/app/pages/trending-grants/trending-grants.component.html
+++ b/src/app/pages/trending-grants/trending-grants.component.html
@@ -48,7 +48,7 @@
                   <h3>$ {{lg.totalFunding - lg.totalPayed}}</h3>
                   <p>OUT OF $ {{lg.targetFunding}}</p>
 
-                  <ion-button class="details" mode="md" slot="end" (click)="viewGrunt(lg)">See</ion-button>
+                  <ion-button class="details" mode="md" slot="end" (click)="viewGrant(lg)">See</ion-button>
                   <ion-button class="details" mode="md" slot="end" (click)="grantDetails(lg._id)">Details
                   </ion-button>
 
